--- a/styles/productos.css
+++ b/styles/productos.css
@@ -223,3 +223,26 @@ main {
 .first-section .first a:hover {
     background-color: #E71D2A;
 }
+
+
+
+#cart-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #E71D2A;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    z-index: 1000;
+}
+
+#cart-float ion-icon {
+    color: white;
+    font-size: 24px;
+}
