--- a/styles/promociones.css
+++ b/styles/promociones.css
@@ -108,6 +108,15 @@ header .right {
     background-image: url(/img/productos/3.svg); 
 }
 
+.cuarto {
+    background-image: url(/img/cocaPromocion.jpeg); 
+}
+
+.quinto {
+    background-image: url(/img/spritePromocion.jpeg); 
+}
+
+
 .promotion-card h3 {
     margin: 10px 0;
     color: white;
@@ -176,4 +185,26 @@ header .right {
 .promotion-card:hover h4,
 .promotion-card:hover .promotion-details {
     display: none; /* Hide original content on hover */
+}
+
+
+#cart-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #E71D2A;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    z-index: 1000;
+}
+
+#cart-float ion-icon {
+    color: white;
+    font-size: 24px;
 }
